--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/kztpea348/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kztpea348/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/kztpea348/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487702.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229159103-2-320x200.jpg"><p align="center">【最新疫情10.20】川普：全听科学的 美将陷萧条</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487975.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-110699804-320x200.jpg"><p align="center">美委员会吁华府制定战略 健全ICT供应链</p></a>
+<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487975.md#1" title="美委员会吁华府制定战略 健全ICT供应链""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-110699804-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12487702.md#1" title="【最新疫情10.20】川普：全听科学的 美将陷萧条""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229159103-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487771.md#1" title="美制裁六中企及两中国人 指违反伊朗禁令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/EE-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484715.md#1" title="杨威：美国总统选举冲刺摇摆州争270票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1280827022-320x200.jpg">&nbsp;</a>
@@ -11,19 +12,18 @@
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】美加边境关闭延至11月""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1RW499-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/17/n12482843.md#1" title="【独家】严控意识形态 习近平左转三节点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-146033862-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485349.md#1" title="万人拉和平人链 德民众：中共病毒令人惊醒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_6394-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kztpea348/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kztpea348.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488381.md#1">文件签名显示送修电脑的是亨特·拜登本人</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488268.md#1">中共五中全会前夕 政法系高官密集落马</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488116.md#1">纽约市大选日投票指南</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488108.md#1">纽约市公园局员工念“法轮大法好” 病痛消失</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488123.md#1">继里根之后 川普或在11月大选赢得纽约</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12487884.md#1">湖北高院副院长在办公室自杀身亡</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488450.md#1">组图：川普图森竞选集会 谈边界筑墙政绩</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488366.md#1">印度裔老人花1500天 走了地球一圈</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488458.md#1">富士康称继续与美政府合作 投资威州创造就业</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488381.md#1">文件签名显示送修电脑的是亨特·拜登本人</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488268.md#1">中共五中全会前夕 政法系高官密集落马</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/20/n12488116.md#1">纽约市大选日投票指南</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
-<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
-<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
+<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
+<a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485506.md#1">【翻墙必看】拜登邮件门牵出另一民主党大佬</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/19/n12485959.md#1">派送费急降又欠薪 大陆多地快递员集体罢工</a><br>
 <a href="https://github.com/kztpea348/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,873,771 人
+!共 365,877,412 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
