--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -376,7 +376,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/kztpea348/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977994.md#1" target="_blank">林辉：一篇文章惹毛动怒 民间顾准拒辱自尽</a></li><li><a href="https://github.com/kztpea348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
